# dAngr

./: .gitignore  .gitmodules  .pylintrc  Dockerfile  LICENSE  Readme.md  TODO.md  build.sh  core  demo_bin-exploit  example  file  p2pcam.dangr  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  test  test copy.py
.devcontainer/: Dockerfile.dev  Dockerfile.mac.dev  devcontainer.json  set-mac.sh
.github/agents/: dAngr.agent.md
docs/: documentation.md
examples/: 07_strcpy_test.md  dfs_bfs_demo  dfs_bfs_demo.c  dfs_bfs_demo.md  eufy_hooks.py  home_security.md
examples/HTB/: exatlon_v1.md  main  main2  rauth.md  solve.md
examples/aes_example/: README.md  aes_example  aes_example.c  aes_example.cmd
examples/angr_examples/: 00_fauxware.md  01_little_engine.md  01_little_engine.md.bad  02_whitehat_crypto400.md  03_csaw_wyvern.md  04_tumctf2016_zwiebel.md.bad  05_flareon2015_5.md  07_cgc_identification.md  08_Grub_back_to_28.md.bad  09_insomnihack_aeg.md  10_mbrainfuzz.md  A00_hackcon2016_angry-reverser.md  A01_securityfest_fairlight.md  A02_defcon2016quals_baby-re.md
examples/basic_example/: README.md  example  example.c  example.dangr  example_commands.txt  example_hooks.py
src/: app.py  doc.py
tests/: LoggingAsyncMock.py  LoggingMock.py  example  example.md  example_hooks.py  test_Server.py  test_basic_commands.py  test_basic_execution.py  test_debug_breakpoint.py  test_debug_execution.py  test_debug_info.py  test_examples.py  test_generic_command_execution.py  test_lexer.py  test_memory.py  test_search_techniques.py
tools/: document_gen.py
(+290 files in other folders)
